apps/production/medidocs-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medidocs-api
  namespace: medidocs-api
spec:
  selector:
    app: medidocs-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
